Pizza Task Completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <div class="content">
   <router-outlet></router-outlet>
 </div>
-<button class="btn btn-sm scroll-up" (click)="scrollUp()"><i class="fa fa-angle-up"></i></button>
+<button class="btn btn-sm scrollToTop" (click)="scrollUp()"><i class="fa fa-angle-up"></i></button>
 <app-footer></app-footer>
