--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,3 +5,10 @@
   right: 0;
   z-index: 100;
 }
+
+.appiness-logo {
+  background-image: url('../../../assets/appiness.png');
+  width: 150px;
+  height: 72%;
+  background-repeat: no-repeat;
+}
