--- a/src/app/components/order-details/order-details.component.html
+++ b/src/app/components/order-details/order-details.component.html
@@ -1,4 +1,4 @@
-<section class="col-sm-12 col-md-10 col-lg-8 col-xl-8 mx-auto p-2 m-0 mt-5">
+<section class="col-sm-12 col-md-10 col-lg-8 col-xl-8 mx-auto p-2 m-0 mt-5" *ngIf="orderDetails">
     <div class="col-12 p-0 m-0 order mb-2 mt-5">
     <label class="bg-primary text-white col-12 text-center p-3 m-0 title">
       <strong>Order Details</strong>
