--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-  <span><img src="../../../assets/appiness.png" alt="Appiness Logo" height="100%" width="100%"></span>
+  <span class="appiness-logo"></span>
   <label for="">Pizza</label>
 </mat-toolbar>
