--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-    <p>Copyright © 2020 appiness interactive pvt ltd</p>
+    <p>Copyright © 2020 appiness interactive pvt ltd.</p>
 </mat-toolbar>
